--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   http: ^1.2.2
   html: ^0.15.0
+  flutter_background_service: ^2.0.0
+  flutter_local_notifications: ^15.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
