feat: headline과 general 공지사항 구분하여 크롤링

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,10 +45,18 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+        <string>fetch</string>
+        <string>location</string>
+        <string>processing</string>
+        <string>remote-notification</string>
+    </array>
+    <key>BGTaskSchedulerPermittedIdentifiers</key>
+    <array>
+        <string>my</string>
+    </array>
 </dict>
 </plist>
 <key>UIBackgroundModes</key>
-<array>
-    <string>fetch</string>
-    <string>processing</string>
-</array>
+
