feat: 공지사항 클릭시 앱 내 사파리 화면 출력

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -56,6 +56,11 @@
     <array>
         <string>my</string>
     </array>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 </dict>
 </plist>
 <key>UIBackgroundModes</key>
