--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   flutter_local_notifications: ^15.0.0
   path_provider: ^2.0.14
   cupertino_icons: ^1.0.8
-  webview_flutter: ^4.10.0
+  url_launcher: ^6.1.8
 
 dev_dependencies:
   flutter_test:
