--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,15 +17,17 @@ dependencies:
   path_provider: ^2.0.14
   cupertino_icons: ^1.0.8
   url_launcher: ^6.1.8
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
+  assets:
+    - .env
   fonts:
     - family: Pretendard
       fonts:
