--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: practice_crawling
+name: inha_notice
 description: "A new Flutter project."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
@@ -18,6 +18,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   url_launcher: ^6.1.8
   flutter_dotenv: ^5.2.1
+  xml: ^6.5.0
 
 dev_dependencies:
   flutter_test:
