--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   url_launcher: ^6.1.8
   flutter_dotenv: ^5.2.1
   xml: ^6.5.0
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
