--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   xml: ^6.5.0
   intl: ^0.20.1
+  shared_preferences: ^2.3.5
 
 dev_dependencies:
   flutter_test:
@@ -30,6 +31,7 @@ flutter:
   uses-material-design: true
   assets:
     - .env
+    - assets/images/onboarding.png
   fonts:
     - family: Pretendard
       fonts:
