--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   shared_preferences: ^2.3.5
   sqflite: ^2.4.1
   path: ^1.9.0
+  firebase_core: ^3.10.0
+  firebase_messaging: ^15.2.0
 
 dev_dependencies:
   flutter_test:
