--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   path: ^1.9.0
   firebase_core: ^3.10.0
   firebase_messaging: ^15.2.0
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
