--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   logger: ^2.5.0
   flutter_inappwebview: ^6.1.5
   share_plus: ^10.1.4
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
