chore: 스타일 변경 및 모듈화 진행
- add app_theme_mode.dart
- 스낵바 텍스트 변경
- 변수명 수정

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,3 +53,6 @@ flutter:
         - asset: assets/fonts/Pretendard-SemiBold.otf
         - asset: assets/fonts/Pretendard-Thin.otf
           weight: 700
+    - family: TossFaceFontMac
+      fonts:
+        - asset: assets/fonts/TossFaceFontMac.ttf
