--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ flutter:
   assets:
     - .env
     - assets/images/onboarding.png
+    - assets/licenses/licenses.json
   fonts:
     - family: Pretendard
       fonts:
