--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_inappwebview: ^6.1.5
   share_plus: ^10.1.4
   pull_to_refresh: ^2.0.0
+  charset_converter: ^2.3.0
 
 dev_dependencies:
   flutter_test:
