--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   share_plus: ^11.0.0
   pull_to_refresh: ^2.0.0
   charset_converter: ^2.3.0
+  add_2_calendar: ^3.0.1
+  vibration: ^3.1.3
 
 dev_dependencies:
   flutter_test:
