build(TestFlight): release 2.6.0 (52)

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -57,5 +57,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSRemindersUsageDescription</key>
+    <string>캘린더 일정 추가를 위해 필요합니다.</string>
 </dict>
 </plist>
