--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.2.1' // ✅ 여기 추가
+        classpath 'com.android.tools.build:gradle:8.2.1'
     }
 }
 
