--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,4 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
-org.gradle.java.home=C:\\Program Files\\Java\\jdk-21
+org.gradle.java.home=/Users/jun/Library/Java/JavaVirtualMachines/ms-21.0.8/Contents/Home
