--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,18 @@ dependencies:
   share_plus: ^12.0.1
   pull_to_refresh: ^2.0.0
   charset_converter: ^2.3.0
+  flutter_bloc: ^9.1.1
+  dartz: ^0.10.1
+  equatable: ^2.0.7
+  get_it: ^9.2.0
+  freezed_annotation: ^3.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  build_runner: ^2.10.4
+  freezed: ^3.2.3
 
 flutter:
   uses-material-design: true
