--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   equatable: ^2.0.7
   get_it: ^9.2.0
   freezed_annotation: ^3.1.0
+  http_status_code: ^0.0.2
 
 dev_dependencies:
   flutter_test:
