--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   get_it: ^9.2.0
   freezed_annotation: ^3.1.0
   http_status_code: ^0.0.2
+  skeletonizer: ^2.1.2
 
 dev_dependencies:
   flutter_test:
