feat(more): CustomLicensePage에 대한 클린 아키텍처 + BLoC 패턴으로 리팩토링

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ key.jks
 key.properties
 **/*.keystore
 **/*.jks
+
+lib/features/auth/
+lib/features/feed/
+lib/features/post/
+lib/features/recruitment/
