--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   freezed_annotation: ^3.1.0
   http_status_code: ^0.0.2
   skeletonizer: ^2.1.2
+  flutter_secure_storage: ^10.0.0
 
 dev_dependencies:
   flutter_test:
