--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -10,6 +10,18 @@ if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
 
+def versionProperties = new Properties()
+def versionPropertiesFile = rootProject.file('app/version.properties')
+if (!versionPropertiesFile.exists()) {
+    throw new GradleException("app/version.properties 파일이 없습니다.")
+}
+versionProperties.load(new FileInputStream(versionPropertiesFile))
+def getRequiredProp = { key ->
+    def val = versionProperties.getProperty(key)
+    if (val == null) throw new GradleException("version.properties에 '${key}'가 없습니다.")
+    return val
+}
+
 android {
     namespace = "com.logicallawbio.inha_notice"
     compileSdk = 36
@@ -28,13 +40,13 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.logicallawbio.inha_notice"
+        applicationId = getRequiredProp('APPLICATION_ID')
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdkVersion = flutter.minSdkVersion
         targetSdk = 36
-        versionCode = 22
-        versionName = "2.6.2"
+        versionCode = Integer.parseInt(getRequiredProp('VERSION_CODE'))
+        versionName = getRequiredProp('VERSION_NAME')
     }
 
     signingConfigs {
