--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dev_dependencies:
   build_runner: ^2.10.4
   freezed: ^3.2.3
   sqflite_common_ffi: ^2.3.4+4
+  bloc_test: ^10.0.0
+  mocktail: ^1.0.4
 
 flutter:
   uses-material-design: true
